--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,13 @@ jobs:
       with:
         python-version: 3.9
 
+    - name: Install dependencies
+      run: pip install wheel
+
     - name: Build distribution package
-      run: python setup.py sdist bdist_wheel
+      run: |
+        python setup.py sdist
+        python setup.py bdist_wheel
 
     - name: Publish to PyPI
       run: twine upload dist/*
