--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,17 @@ jobs:
     - name: Install dependencies
       run: pip install wheel twine
 
+    - name: Read current version
+      id: version
+      run: echo "::set-output name=version::$(grep -oP '(?<=version=\")[^\"]*' setup.py)"
+
+    - name: Increment version
+      id: new_version
+      run: echo "::set-output name=new_version::${{ steps.version.outputs.version | awk -F. -v OFS=. '{$NF++;print}' }}"
+
+    - name: Update version in setup.py
+      run: sed -i "s/version='${{ steps.version.outputs.version }}'/version='${{ steps.new_version.outputs.new_version }}'/" setup.py
+
     - name: Build distribution package
       run: |
         python setup.py sdist
