--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Increment version
       id: new_version
-      run: echo "::set-output name=new_version::${{ steps.version.outputs.version | awk -F. -v OFS=. '{$NF++;print}' }}"
+      run: echo "::set-output name=new_version::${{ steps.version.outputs.version & awk -F. -v OFS=. '{$NF++;print}' }}"
 
     - name: Update version in setup.py
       run: sed -i "s/version='${{ steps.version.outputs.version }}'/version='${{ steps.new_version.outputs.new_version }}'/" setup.py
