--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,40 +6,69 @@ on:
       - main
 
 jobs:
-  build:
+  checkout:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
+  setup_python:
+    runs-on: ubuntu-latest
+    needs: checkout
+    steps:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
 
+  install_dependencies:
+    runs-on: ubuntu-latest
+    needs: setup_python
+    steps:
     - name: Install dependencies
       run: pip install wheel twine
 
-    - name: Read current version
+  read_version:
+    runs-on: ubuntu-latest
+    needs: install_dependencies
+    outputs:
       id: version
-      run: echo "::set-output name=version::$(grep -oP '(?<=version=\")[^\"]*' setup.py)"
+    steps:
+    - name: Read current version
+      run: echo "::set-output name=version::$(awk -F= '/version/ {gsub(/[[:space:]]/, "", $2); gsub(/"/, "", $2); print $2}' setup.py)"
 
-    - name: Increment version
+  increment_version:
+    runs-on: ubuntu-latest
+    needs: read_version
+    outputs:
       id: new_version
+    steps:
+    - name: Increment version
       run: |
-        current_version=$(grep -oP '(?<=version=\")[^\"]*' setup.py)
+        current_version=${{ needs.read_version.outputs.version }}
         new_version=$(python -c "version = list(map(int, '$current_version'.split('.'))); version[-1] += 1; print('.'.join(map(str, version)))")
         echo "::set-output name=new_version::$new_version"
 
+  update_version:
+    runs-on: ubuntu-latest
+    needs: increment_version
+    steps:
     - name: Update version in setup.py
-      run: sed -i "s/version='${{ steps.version.outputs.version }}'/version='${{ steps.new_version.outputs.new_version }}'/" setup.py
+      run: sed -i "s/version='${{ needs.read_version.outputs.version }}'/version='${{ needs.increment_version.outputs.new_version }}'/" setup.py
 
+  build_package:
+    runs-on: ubuntu-latest
+    needs: update_version
+    steps:
     - name: Build distribution package
       run: |
         python setup.py sdist
         python setup.py bdist_wheel
 
+  publish_to_pypi:
+    runs-on: ubuntu-latest
+    needs: build_package
+    steps:
     - name: Publish to PyPI
       run: twine upload dist/*
       env:
