--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       id: version
     steps:
     - name: Read current version
-      run: echo "::set-output name=version::$(awk -F= '/version/ {gsub(/[[:space:]]/, "", $2); gsub(/"/, "", $2); print $2}' setup.py)"
+      run: echo "::set-output name=version::$(awk -F"'" '/version=/{print $2}' setup.py)"
 
   increment_version:
     runs-on: ubuntu-latest
@@ -45,12 +45,12 @@ jobs:
     steps:
     - name: Increment version
       run: |
-        current_version=${{ needs.read_version.outputs.version }}
-        if [ -n "$current_version" ]; then
+        current_version=$(awk -F"'" '/version=/{print $2}' setup.py)
+        if [[ "$current_version" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
           new_version=$(python -c "version = list(map(int, '$current_version'.split('.'))); version[-1] += 1; print('.'.join(map(str, version)))")
           echo "::set-output name=new_version::$new_version"
         else
-          echo "Error: Current version is empty."
+          echo "Error: Current version ('$current_version') is not in the expected format."
           exit 1
         fi
 
