--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,14 +6,21 @@ on:
       - main
 
 jobs:
-  # Checkout code from the repository
+  set_current_directory:
+    runs-on: ubuntu-latest
+    outputs:
+      id: current_directory
+    steps:
+    - name: Set current directory
+      run: echo "::set-output name=current_directory::$(pwd)"
+
   checkout:
     runs-on: ubuntu-latest
+    needs: set_current_directory
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-  # Set up Python environment
   setup_python:
     runs-on: ubuntu-latest
     needs: checkout
@@ -23,7 +30,6 @@ jobs:
       with:
         python-version: 3.9
 
-  # Install project dependencies
   install_dependencies:
     runs-on: ubuntu-latest
     needs: setup_python
@@ -31,29 +37,32 @@ jobs:
     - name: Install dependencies
       run: pip install wheel twine
 
-  # Read the current version from setup.py
   read_version:
     runs-on: ubuntu-latest
-    needs: install_dependencies
+    needs: 
+      - install_dependencies
+      - set_current_directory
     outputs:
       id: version
     steps:
     - name: Read current version
-      run: echo "::set-output name=version::$(awk -F"'" '/version=/{print $2}' setup.py)"
+      run: |
+        cd ${{ needs.set_current_directory.outputs.current_directory }}
+        echo "::set-output name=version::$(awk -F"'" '/version=/{print $2}' setup.py)"
 
-  # Increment the project version
   increment_version:
     runs-on: ubuntu-latest
-    needs: read_version
+    needs: 
+      - read_version
+      - set_current_directory
     outputs:
       id: new_version
     steps:
     - name: Increment version
       run: |
+        cd ${{ needs.set_current_directory.outputs.current_directory }}
         current_version=$(awk -F"'" '/version=/{print $2}' setup.py)
-        # Check if the current version follows a semantic versioning pattern
         if [[ "$current_version" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-          # Increment the last version component (patch version)
           new_version=$(python -c "version = list(map(int, '$current_version'.split('.'))); version[-1] += 1; print('.'.join(map(str, version)))")
           echo "::set-output name=new_version::$new_version"
         else
@@ -61,33 +70,38 @@ jobs:
           exit 1
         fi
 
-  # Update the version in setup.py
   update_version:
     runs-on: ubuntu-latest
-    needs: increment_version
+    needs: 
+      - increment_version
+      - set_current_directory
     steps:
     - name: Update version in setup.py
-      run: sed -i "s/version='${{ needs.read_version.outputs.version }}'/version='${{ needs.increment_version.outputs.new_version }}'/" setup.py
+      run: |
+        cd ${{ needs.set_current_directory.outputs.current_directory }}
+        sed -i "s/version='${{ needs.read_version.outputs.version }}'/version='${{ needs.increment_version.outputs.new_version }}'/" setup.py
 
-  # Build distribution package
   build_package:
     runs-on: ubuntu-latest
     needs: update_version
     steps:
     - name: Build distribution package
       run: |
+        cd ${{ needs.set_current_directory.outputs.current_directory }}
         python setup.py sdist
         python setup.py bdist_wheel
 
-  # Publish to PyPI
   publish_to_pypi:
     runs-on: ubuntu-latest
     needs: 
       - build_package
       - update_version
+      - set_current_directory
     steps:
     - name: Publish to PyPI
-      run: twine upload dist/*
+      run: |
+        cd ${{ needs.set_current_directory.outputs.current_directory }}
+        twine upload dist/*
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
