--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,8 @@ jobs:
     - name: Read current version
       run: |
         cd ${{ needs.set_current_directory.outputs.current_directory }}
-        echo "::set-output name=version::$(awk -F"'" '/version=/{print $2}' setup.py)"
+        version=$(grep -oP "version=\K'[^']+" setup.py)
+        echo "::set-output name=version::$version"
 
   increment_version:
     runs-on: ubuntu-latest
@@ -61,7 +62,7 @@ jobs:
     - name: Increment version
       run: |
         cd ${{ needs.set_current_directory.outputs.current_directory }}
-        current_version=$(awk -F"'" '/version=/{print $2}' setup.py)
+        current_version=$(grep -oP "version=\K'[^']+" setup.py)
         if [[ "$current_version" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
           new_version=$(python -c "version = list(map(int, '$current_version'.split('.'))); version[-1] += 1; print('.'.join(map(str, version)))")
           echo "::set-output name=new_version::$new_version"
@@ -83,7 +84,9 @@ jobs:
 
   build_package:
     runs-on: ubuntu-latest
-    needs: update_version
+    needs: 
+      - update_version
+      - set_current_directory
     steps:
     - name: Build distribution package
       run: |
