--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,32 @@
+name: Python Library Deployment
+
 on:
   push:
     branches:
       - main
 
 jobs:
-  set_current_directory:
+  build:
     runs-on: ubuntu-latest
-    outputs:
-      id: current_directory
-    steps:
-      - name: Check setup.py existence
-        run: |
-          if [ -f "workflowStuff/setup.py" ]; then
-            echo "::set-output name=current_directory::$(pwd)/workflowStuff"
-          else
-            echo "Error: setup.py not found in workflowStuff directory."
-            echo "Current directory contents:"
-            ls -R
-            echo "workflowStuff directory contents:"
-            ls -R workflowStuff
-            exit 1
-          fi
 
-  checkout:
-    runs-on: ubuntu-latest
-    needs: set_current_directory
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-  # Rest of the workflow...
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+
+    - name: Install dependencies
+      run: pip install wheel twine
+
+    - name: Build distribution package
+      run: |
+        python setup.py sdist
+        python setup.py bdist_wheel
+    - name: Publish to PyPI
+      run: twine upload dist/*
+      env:
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
